--- a/gomsl.html
+++ b/gomsl.html
@@ -10,7 +10,7 @@
 	<div class="khungkhung">
 		<header class="fixed-header">
 			<div id="popupScanning" class="popup hidden">
-				<video id="video" width="480" height="200" autoplay unmuted playsinline></video>
+				<video id="video" autoplay unmuted playsinline></video>
 				<br>
 				<button id="closePopupScanner">Đóng</button>
 			</div>
